# flight_manager_V1

./: Cargo.toml  README.md
assets/: hello.html
doc/: README.md  domain.puml  glossary.md  log.md  search-index.js  settings.html  source-files.js  tmp_log.md  uc1.md  use case graph.puml
doc/analysis/: domain.puml  output.docx  ssd.puml  ssd1.puml  ssd3.puml  uc1.md  uc1_reserve_tickets.md  uc2_view_flights.md  uc3_refund.md  uc4_login.md  use case graph.puml
doc/anyhow/: struct.Chain.html  struct.Error.html
doc/boolinator/: trait.Boolinator.html
doc/chrono/: enum.Month.html  enum.Weekday.html  struct.DateTime.html  struct.Duration.html
doc/ctor/: all.html  attr.ctor.html  attr.dtor.html  index.html
doc/dashmap/: all.html  index.html  struct.DashMap.html  struct.DashSet.html  struct.ReadOnlyView.html  trait.Map.html
doc/design/: dcd.puml
doc/erased_serde/: all.html  index.html
doc/flight_manager_v1/: all.html  index.html  sidebar-items.js
doc/inventory/: all.html  index.html
doc/inventory_impl/: all.html  index.html
doc/itoa/: index.html
doc/libc/: enum.FILE.html  enum.fpos_t.html  enum.timezone.html  struct.sockaddr.html  struct.stat.html  struct.timespec.html  struct.timeval.html  struct.tm.html  struct.utimbuf.html
doc/serde/: trait.Serialize.html
doc/steel_cent/: all.html  index.html  struct.Money.html  struct.SmallMoney.html
doc/typetag/: all.html  index.html
doc/typetag_impl/: all.html  attr.deserialize.html  attr.serde.html  attr.serialize.html  index.html
doc/winapi/: all.html  trait.Class.html  (+1 more)
src/: init.rs  lib.rs  main.rs
(+1177 files in other folders)
