[package]
name = "flight_manager_v1"
version = "0.1.0"
authors = ["deuchie <deuchie@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
boolinator = "2.4.0"